--- a/index1.html
+++ b/index1.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#about">Help</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Help">Help</a></li>
         <li><a href="#Characters">Characters</a></li>
         <img src="Spidey.png" style="width: 50px;height: 50px;">
     </ul>
 <article>
     <h2>Your friendly Neighbourhood</h2> <br>
-    <h1>Spiderman</h1>
+    <h1>Spider-Man</h1>
 </article>
 <div class="desc">
     <p>
