--- a/index1.html
+++ b/index1.html
@@ -16,15 +16,16 @@
         <li><a href="#Characters">Characters</a></li>
         <img src="Spidey.png" style="width: 50px;height: 50px;">
     </ul>
-<article>
+<article class="bod1">
     <h2>Your friendly Neighbourhood</h2> <br>
     <h1>Spider-Man</h1>
-</article>
+
 <div class="desc">
     <p>
         Spider-Man's secret identity is Peter Benjamin Parker, a teenage high school student and an orphan raised by his Aunt May and Uncle Ben in New York City after his parents Richard and Mary Parker died in a plane crash. Lee and Ditko had the character deal with the struggles of adolescence and financial issues and gave him many supporting characters, such as Flash Thompson, J. Jonah Jameson, and Harry Osborn; romantic interests Gwen Stacy, Mary Jane Watson, and the Black Cat; and enemies such as the Green Goblin, Doctor Octopus, and Venom. In his origin story, Spider-Man gets his superhuman spider-powers and abilities after being bitten by a radioactive spider; these include superhuman strength, agility, reflexes, stamina, durability, coordination, and balance, clinging to surfaces and ceilings like a spider, and detecting danger with his precognition ability called "spider-sense". He also builds wrist-mounted "web-shooter" devices that shoot artificial spider-webs of his own design, which are used both for fighting and for web-swinging across the city. Peter Parker originally used his powers for his own personal gain, but after his Uncle Ben was killed by a thief that Peter did not stop, he began to use his powers to fight crime by becoming the superhero known as Spider-Man.
     </p>
 </div>
+</article>
 <div class="footer">
     <p>Made by Dan Benguira - All rights reserved</p>
   </div>
